# disclosure_agent

./: .env.sample  .gitignore  AGENTS.md  README.md  UI_TROUBLESHOOTING.md  backend_logs.txt  celery_worker_logs.txt  debug_instructions.md  docker-compose.yml  recent_logs.txt  開示情報比較仕様書.md
backend/: .dockerignore  Dockerfile  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README_QUEUE_MANAGEMENT.md  check_comparison_detailed.py  check_comparison_result.py  check_endpoint.py  check_extracted_content_structure.py  check_importance.py  check_ui_data.py  clear_queue.ps1  debug_config.py  debug_section_names.py  debug_section_processing.py  find_object_values.py  monitor_comparison.py  monitor_docs.py  monitor_progress.py  pyproject.toml  restart_celery.ps1  restart_services.ps1  restart_services_clean.ps1  run_new_comparison.py  test_api.py  test_iterative_search.py  test_section_mapping.py  trigger_comparison_test.py  verify_comparison_details.py  verify_fix.py  watch_doc2.py  watch_extraction.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: config.py  openai_client.py
backend/app/schemas/: comparisons.py  documents.py
backend/app/services/: classifier.py  comparison_engine.py  document_upload.py  metadata_store.py  templates.py
backend/app/workers/: celery_app.py  tasks.py
backend/templates/: README.md  earnings_report.yaml  financial_statements.yaml  integrated_report.yaml  securities_report.yaml
backend/tests/: test_api_documents.py  test_classifier.py  test_comparison_engine.py  test_document_upload.py  test_structuring.py
(+42 files in other folders)
